---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 35..53,
                codes: [
                    "F401",
                    "F841",
                ],
                code_ranges: [
                    43..47,
                    49..53,
                ],
            },
        ),
    ),
)
